[package]
name = "tk-easyloop"
description = """
    A thread local loop and other loop helpers
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["loop", "easy", "tokio", "handle", "core"]
categories = ["Asynchronous", "Network programming"]
homepage = "http://github.com/tailhook/tk-easyloop"
documentation = "http://docs.rs/tk-easyloop"
version = "0.1.1"
authors = ["paul@colomiets.name"]

[dependencies]
tokio-core = "0.1.2"
futures = "0.1.7"
scoped-tls = "0.1.0"
